// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Returns 404 when not found 1`] = `[TRPCError: Event not found with ID: id-not-persisted]`;

exports[`Returns event 1`] = `
{
  "_id": {
    "buffer": {
      "data": [],
      "type": "Buffer",
    },
  },
  "actions": [
    {
      "createdAt": "<createdAt />",
      "createdAtLocation": "<createdAtLocation />",
      "createdBy": "<createdBy />",
      "data": {},
      "draft": false,
      "type": "CREATE",
    },
  ],
  "createdAt": "<createdAt />",
  "id": "<id />",
  "locationIds": "<locationIds />",
  "transactionId": "<transactionId />",
  "type": "TENNIS_CLUB_MEMBERSHIP",
  "updatedAt": "<updatedAt />",
  "userIds": "<userIds />",
}
`;

exports[`Returns event with all actions resolved 1`] = `
{
  "_id": {
    "buffer": {
      "data": [],
      "type": "Buffer",
    },
  },
  "actions": [
    {
      "createdAt": "<createdAt />",
      "createdAtLocation": "<createdAtLocation />",
      "createdBy": "<createdBy />",
      "data": {},
      "draft": false,
      "type": "CREATE",
    },
    {
      "createdAt": "<createdAt />",
      "createdAtLocation": "<createdAtLocation />",
      "createdBy": "<createdBy />",
      "data": {
        "name": "John Doe",
      },
      "draft": false,
      "eventId": "<eventId />",
      "transactionId": "<transactionId />",
      "type": "DECLARE",
    },
    {
      "createdAt": "<createdAt />",
      "createdAtLocation": "<createdAtLocation />",
      "createdBy": "<createdBy />",
      "data": {
        "favouritePlayer": "Elena Rybakina",
      },
      "draft": false,
      "eventId": "<eventId />",
      "transactionId": "<transactionId />",
      "type": "VALIDATE",
    },
  ],
  "createdAt": "<createdAt />",
  "id": "<id />",
  "locationIds": "<locationIds />",
  "transactionId": "<transactionId />",
  "type": "TENNIS_CLUB_MEMBERSHIP",
  "updatedAt": "<updatedAt />",
  "userIds": "<userIds />",
}
`;
